[package]
name = "amqp_serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bytes = { version = "1.0" }
amqp_macros = {path = "../amqp_macros"}

[dev-dependencies]
