[package]
name = "amqprs"
version = "0.1.17"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "AMQP 0-9-1 client implementation for RabbitMQ"
repository = "https://github.com/gftea/amqprs"
keywords = ["amqp", "rabbitmq", "async", "tokio", "lock-free"]
categories = ["network-programming", "asynchronous"]
documentation = "https://docs.rs/amqprs/latest/amqprs/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
compliance_assert = []
tracing = ["dep:tracing"]

[dependencies]
tokio = { version = "1.0", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "net",
    "io-util",
    "time",
    "macros",
] }
bytes = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
amqp_serde = { version = "0.1.1" }
async-trait = "0.1"
tracing = { version = "0.1", optional = true }

# test different tls library 
# original native tls
# native-tls = "0.2"

# tokio integrated native tls 
tokio-native-tls  = "0.3"

# rustls dependencies
tokio-rustls = "0.23"
webpki-roots = "0.22"
rustls-pemfile = "1"
[dev-dependencies]
tracing = { version = "0.1" }
tracing-subscriber = "0.3"
