[package]
name = "amqprs"
version = "1.2.1"
edition = "2021"
rust-version = "1.56"
license = "MIT"
readme = "README.md"
description = "AMQP 0-9-1 client implementation for RabbitMQ"
repository = "https://github.com/gftea/amqprs"
keywords = ["amqp", "rabbitmq", "async", "tokio", "lock-free"]
categories = ["network-programming", "asynchronous"]
documentation = "https://docs.rs/amqprs/latest/amqprs/"

exclude = ["*.profraw", "*.profdata"]

[package.metadata.docs.rs]
# Whether to pass `--all-features` to Cargo (default: false)
all-features = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
compliance_assert = []
traces = ["tracing"]
tls = ["tokio-rustls", "rustls-pemfile", "webpki-roots"]
urispec = ["uriparse"]

[dependencies]
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "net",
    "io-util",
    "time",
    "macros",
] }
bytes = { version = "1.2" }
serde = { version = "1.0", features = ["derive"] }
amqp_serde = { path = "../amqp_serde", version = "0.3" }
async-trait = "0.1"
tracing = { version = "0.1", optional = true }
uriparse = { version = "0.6", optional = true }

# SSL/TLS dependencies
tokio-rustls = { version = "0.23", optional = true }
rustls-pemfile = { version = "1", optional = true }
webpki-roots = { version = "0.22", optional = true }

[dev-dependencies]
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
