[package]
name = "benchmarks"
version = "0.0.0"
publish = false
edition = "2021"


[dependencies]
bencher = "0.1.5"
criterion_bencher_compat ={ version = "0.4.0"}

criterion = { version = "0.4" }

tokio = { version = "1", features = ["full"] }
async-trait = { version = "0.1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# amqprs client
amqprs = { path = "../amqprs" }

# lapin client
lapin = { version = "*" }
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"

[features]
use_bencher = []
use_criterion = []

[[bench]]
name = "basic_pub"
path = "src/basic_pub.rs"
harness = false
